feat: add icons in ordered list in About.html and style them

--- a/about.html
+++ b/about.html
@@ -63,11 +63,11 @@
     <div class="child-div text-explanation">
         <h3 class="paragraph-title">The three core ethical principles of permaculture are:</h3>
         <p>
-        <ol>
-            <li>Care for the Earth</li>
-            <li>Care for People</li>
-            <li>Fair Share</li>
-        </ol>
+            <ol class="ethical-principles">
+                <li> <img class="list-logo" src="./assets/images/agricultural-tool.webp" alt="funny logo with an agricultural tool"> <span class="list-text-span">Care for the Earth</span> </li>
+                <li> <img class="list-logo" src="./assets/images/happy-face.webp" alt="funny logo with a happy face"><span class="list-text-span">Care for People</span></li>
+                <li> <img class="list-logo" src="./assets/images/small-bee.webp" alt="funny logo with a small bee"><span class="list-text-span">Fair Share</span></li>
+            </ol>
         </p>
     </div>
         </section>
@@ -97,11 +97,11 @@
             <div class="child-div text-explanation">
                     <h3 class="paragraph-title">Contact and Support Us!</h3>
                     <p>
-                    <ul class="conntact-list">
-                        <li>General Questions: info@peaceof.land</li>
-                        <li>Events: veranstaltung@peaceof.land</li>
-                        <li>Support: veranstaltung@peaceof.land</li>
-                    </ul>
+                        <ul class="conntact-list">
+                            <li>General Questions: info@peaceof.land</li>
+                            <li>Events: veranstaltung@peaceof.land</li>
+                            <li>Support: veranstaltung@peaceof.land</li>
+                        </ul>
                     </p>
                     <h3 class="paragraph-title">Our Bank Account</h3>
                     <p>
