--- a/about.html
+++ b/about.html
@@ -98,18 +98,21 @@
                     <h3 class="paragraph-title">Contact and Support Us!</h3>
                     <p>
                         <ul class="conntact-list">
-                            <li>General Questions: info@peaceof.land</li>
-                            <li>Events: veranstaltung@peaceof.land</li>
-                            <li>Support: veranstaltung@peaceof.land</li>
+                            <li><span class="conntact-list-span">General Questions: </span><br>info@peaceof.land</li>
+                            <li><span class="conntact-list-span">Events: </span><br>veranstaltung@peaceof.land</li>
+                            <li><span class="conntact-list-span">Support: </span><br>veranstaltung@peaceof.land</li>
                         </ul>
                     </p>
-                    <h3 class="paragraph-title">Our Bank Account</h3>
-                    <p>
-                        Konto-Inhaber: Peace of Land e.V.
-                        Institut: Berliner Sparkasse <br>
-                        <span class="iban-span">DE63 1005 0000 0190 9933 75</span> <br>
-                        BIC: BELADEBEXXX
-                        Verwendungszweck: Spende (Donation) <+ ggf. gewünschte Verwendung wie z.B. für Mietkosten>
+                    <hr>
+                    <h3 class="paragraph-title">Our Bank Account:</h3>
+                    <p id="bank-account-details">
+                        <ul class="conntact-list">
+                            <li><span class="conntact-list-span">Konto-Inhaber: </span>Peace of Land e.V.</li>
+                            <li><span class="conntact-list-span">Institut: </span>Berliner Sparkasse</li>
+                            <li><span class="conntact-list-span">IBAN: </span>DE63 1005 0000 0190 9933 75</li>
+                            <li><span class="conntact-list-span">BIC: </span>BELADEBEXXX</li>
+                            <li><span class="conntact-list-span">Verwendungszweck: </span>Spende</li>
+                        </ul>
                     </p>
                 </div>
         </section>
