maint: correct code according to html validator

--- a/about.html
+++ b/about.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta
       name="description"
-      content="Permaculture map of Berlin, Germany to support regenative urban agriculture"
-    />
+      content="Permaculture map of Berlin, Germany to support regenative urban agriculture"/>
     <meta
       name="keywords"
-      content="permaculture, berlin, interactive map, regenerative urban agriculture"
-    />
+      content="permaculture, berlin, interactive map, regenerative urban agriculture"/>
     <title>permaculture-map-berlin</title>
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css"/>
   </head>
   <body>
     <div class="page-container">
@@ -22,8 +20,7 @@
           ><img
             class="logo-image"
             src="./assets/images/Logo.webp"
-            alt="Logo raised hand with agricultural tool"
-          />
+            alt="Logo raised hand with agricultural tool"/>
         </a>
 
         <nav>
@@ -62,13 +59,11 @@
         <section>
     <div class="child-div text-explanation">
         <h3 class="paragraph-title">The three core ethical principles of permaculture are:</h3>
-        <p>
-            <ol class="ethical-principles">
-                <li> <img class="list-logo" src="./assets/images/agricultural-tool.webp" alt="funny logo with an agricultural tool"> <span class="list-text-span">Care for the Earth</span> </li>
-                <li> <img class="list-logo" src="./assets/images/happy-face.webp" alt="funny logo with a happy face"><span class="list-text-span">Care for People</span></li>
-                <li> <img class="list-logo" src="./assets/images/small-bee.webp" alt="funny logo with a small bee"><span class="list-text-span">Fair Share</span></li>
-            </ol>
-        </p>
+                <ol class="ethical-principles">
+                    <li> <img class="list-logo" src="./assets/images/agricultural-tool.webp" alt="funny logo with an agricultural tool"> <span class="list-text-span">Care for the Earth</span> </li>
+                    <li> <img class="list-logo" src="./assets/images/happy-face.webp" alt="funny logo with a happy face"><span class="list-text-span">Care for People</span></li>
+                    <li> <img class="list-logo" src="./assets/images/small-bee.webp" alt="funny logo with a small bee"><span class="list-text-span">Fair Share</span></li>
+                </ol>
     </div>
         </section>
           
@@ -96,13 +91,11 @@
         <section>
             <div class="child-div text-explanation">
                     <h3 class="paragraph-title">Contact and Support Us!</h3>
-                    <p>
                         <ul class="conntact-list">
                             <li><span class="conntact-list-span">General Questions: </span><br>info@peaceof.land</li>
                             <li><span class="conntact-list-span">Events: </span><br>veranstaltung@peaceof.land</li>
                             <li><span class="conntact-list-span">Support: </span><br>veranstaltung@peaceof.land</li>
                         </ul>
-                    </p>
                     <hr>
                     <h3 class="paragraph-title">Our Bank Account:</h3>
                     <p id="bank-account-details">
