--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
             ></iframe>
             <button
               type="button"
-              onclick='location.href="https://berlin-permaculture-map/contribute.html"'
+              target="_blank"
+              onclick='location.href="https://www.w3schools.com/css/css3_buttons.asp"'
             >
               CONTRIBUTE!
             </button>
@@ -91,7 +92,7 @@
               mitigating climate change and bolstering biodiversity, it's a
               holistic approach with tangible benefits for our planet.
             </p>
-            <br />
+
             <p>
               But the magic of permaculture doesn't stop there. It also fosters
               a vibrant social environment, advocating for a healthier
