--- a/contribute.html
+++ b/contribute.html
@@ -18,8 +18,8 @@
   <body>
     <div class="page-container">
       <header class="header-section">
-        <a href="https://www.peaceof.land/" target="_blank"
-          ><img
+        <a href="https://www.peaceof.land/" target="_blank">
+          <img
             class="logo-image"
             src="./assets/images/Logo.webp"
             alt="Logo raised hand with agricultural tool"
@@ -44,58 +44,62 @@
         <section>
           <div class="item form-section-div">
             <form action="https://formdump.codeinstitute.net/" method="post">
-              <legend>Contribute!</legend>
+              <fieldset>
+                <legend>Contribute!</legend>
 
-              <label class="label-text" for="projectName">Project Name:</label>
-              <input
-                type="text"
-                name="projectName"
-                id="projectName"
-                placeholder="Peace of Land"
-                autocomplete="on"
-                required
-                autofocus
-              />
+                <label class="label-text" for="projectName"
+                  >Project Name:</label
+                >
+                <input
+                  type="text"
+                  name="projectName"
+                  id="projectName"
+                  placeholder="Peace of Land"
+                  autocomplete="on"
+                  required
+                  autofocus
+                />
 
-              <label class="label-text" for="projectAddress"
-                >Projects Address:</label
-              >
-              <input
-                type="address"
-                name="projectAddress"
-                id="projectAddress"
-                placeholder="Unter den Linden"
-                autocomplete="on"
-                required
-              />
+                <label class="label-text" for="projectAddress"
+                  >Projects Address:</label
+                >
+                <input
+                  type="text"
+                  name="projectAddress"
+                  id="projectAddress"
+                  placeholder="Unter den Linden"
+                  autocomplete="on"
+                  required
+                />
 
-              <label class="label-text" for="contact-email"
-                >Contact-email:</label
-              >
-              <input
-                type="email"
-                name="contact-email"
-                id="contact-email"
-                placeholder="name@dot.com"
-                required
-              />
+                <label class="label-text" for="contact-email"
+                  >Contact-email:</label
+                >
+                <input
+                  type="email"
+                  name="contact-email"
+                  id="contact-email"
+                  placeholder="name@dot.com"
+                  required
+                />
 
-              <label class="label-text" for="textarea-field"
-                >Project Description:</label
-              >
+                <label class="label-text" for="textarea-field"
+                  >Project Description:</label
+                >
 
-              <textarea
-                name="textarea-field"
-                id="textarea-field"
-                cols="20"
-                rows="10"
-                placeholder="Describe the permaculture project here!"
-              >
-              </textarea>
+                <textarea
+                  name="textarea-field"
+                  id="textarea-field"
+                  cols="20"
+                  rows="10"
+                  placeholder="Describe the permaculture project here!"
+                >
+                </textarea>
 
-              <a href="contribute.html">
-                <input class="submit-button" type="submit" value="SUBMIT!" />
-              </a>
+                <a href="contribute.html">
+                  <input class="submit-button" type="submit" value="SUBMIT!" />
+                </a>
+              </fieldset>
             </form>
           </div>
         </section>
@@ -111,8 +115,7 @@
 
         <section>
           <div class="item photo-section-div">
-            <div class="contribute-page-photo">
-            </div>
+            <div class="contribute-page-photo"></div>
           </div>
         </section>
       </main>
@@ -150,8 +153,9 @@
       </footer>
     </div>
   </body>
-  <script
-    src="https://kit.fontawesome.com/c7dbda0798.js"
-    crossorigin="anonymous"
-  ></script>
+  
 </html>
+<script
+  src="https://kit.fontawesome.com/c7dbda0798.js"
+  crossorigin="anonymous"
+></script>
