feat: link CONTRIBUTE button from index.html to contribute page

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <button
               type="button"
               target="_blank"
-              onclick='location.href="https://www.w3schools.com/css/css3_buttons.asp"'
+              onclick="location.href='/contribute.html';"
             >
               CONTRIBUTE!
             </button>
