feat: add abr tags and style them in about.html and photos for README.md file

--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
 
         
             <div class="child-div text-explanation">
-                <h3 class="paragraph-title">Core ethical principles of permaculture are:</h3>
+                <h3 class="paragraph-title">Core <a class="permaculture-link" href="https://permacultureprinciples.com/permaculture-principles/" target="_blank">ethical principles</a> of permaculture are:</h3>
                     <ol class="ethical-principles">
                         <li> <img class="list-logo" src="./assets/images/agricultural-tool.webp" alt="funny logo with an agricultural tool"> <span class="list-text-span">Care for the Earth</span> </li>
                         <li> <img class="list-logo" src="./assets/images/happy-face.webp" alt="funny logo with a happy face"><span class="list-text-span">Care for People</span></li>
@@ -69,9 +69,9 @@
             <div class="child-div about-us-photo about-us-photo-2"></div>
         
             <div class="child-div text-explanation">
-                    <h3 class="paragraph-title">Relocated to Kulturmarkthalle</h3>
+                    <h3 class="paragraph-title">Relocated to <abbr title="KulturMarktHalle e.V., Hanns-Eisler-Straße 93, 10409 Berlin">Kulturmarkthalle</abbr></h3>
                     <p>
-                        Unfortunately, we had to say goodbye to our old location at Am Weingarten. Starting in
+                        Unfortunately, we had to say goodbye to our old location at <abbr title="Am Weingarten 14, 10407 Berlin">Weingarten</abbr>. Starting in
                         winter 2022, we
                         embraced our new sanctuary at the Kulturmarkthalle. There, we've
                         diligently
