--- a/contribute.html
+++ b/contribute.html
@@ -13,6 +13,12 @@
       content="permaculture, berlin, interactive map, regenerative urban agriculture"
     />
     <title>permaculture-map-berlin</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&family=Urbanist:ital,wght@0,400;0,600;0,700;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
