--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
       content="permaculture, berlin, interactive map, regenerative urban agriculture"
     />
     <title>permaculture-map-berlin</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&family=Urbanist:ital,wght@0,400;0,600;0,700;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
@@ -44,7 +50,7 @@
         </section>
 
         <section>
-          <div class="text-explanation">
+          <div class="text-explanation home-text-explanation">
             <h3 class="paragraph-title">What's Your Next Step?</h3>
             <p>
               Embark on a journey through our interactive map and uncover the
@@ -61,7 +67,7 @@
             </p>
           </div>
         </section>
-        
+
         <section>
           <div class="map-section">
             <iframe
