--- a/contribute.html
+++ b/contribute.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
@@ -48,7 +48,7 @@
         </section>
 
         <section>
-          <div class="item form-section-div">
+          <div class="form-section-div">
             <form action="https://formdump.codeinstitute.net/" method="post">
               <fieldset>
                 <legend>Contribute!</legend>
@@ -113,13 +113,13 @@
         <div class="form-section-div-absolute">
           <img
             class="form-section-photo"
-            src="./assets/images/Wildkraeuterernte_im_Sieb_quer_800x600.webp"
+            src="./assets/images/wildkraeuterernte_im_Sieb_quer_800x600.webp"
             alt="Wild herbs nicely decorated"
           />
         </div>
 
         <section>
-          <div class="item photo-section-div">
+          <div class="photo-section-div">
             <div class="contribute-page-photo"></div>
           </div>
         </section>
