refactor: alter submit button and style it

--- a/contribute.html
+++ b/contribute.html
@@ -108,7 +108,7 @@
                 </textarea>
 
                 <a href="contribute.html">
-                  <input class="submit-button" type="submit" value="SUBMIT!" />
+                  <div class="submit-button">SUBMIT!</div>
                 </a>
               </fieldset>
             </form>
