--- a/contribute.html
+++ b/contribute.html
@@ -52,68 +52,64 @@
           </div>
         </section>
 
-        <section>
-          <div class="form-section-div">
-            <form action="https://formdump.codeinstitute.net/" method="post">
-              <fieldset>
-                <legend>Contribute!</legend>
+        <div class="form-section-div">
+          <form action="https://formdump.codeinstitute.net/" method="post">
+            <fieldset>
+              <legend>Contribute!</legend>
 
-                <label class="label-text" for="projectName"
-                  >Project Name:</label
-                >
-                <input
-                  type="text"
-                  name="projectName"
-                  id="projectName"
-                  placeholder="Peace of Land"
-                  autocomplete="on"
-                  required
-                  autofocus
-                />
+              <label class="label-text" for="projectName">Project Name:</label>
+              <input
+                type="text"
+                name="projectName"
+                id="projectName"
+                placeholder="Peace of Land"
+                autocomplete="on"
+                required
+                autofocus
+              />
 
-                <label class="label-text" for="projectAddress"
-                  >Projects Address:</label
-                >
-                <input
-                  type="text"
-                  name="projectAddress"
-                  id="projectAddress"
-                  placeholder="Unter den Linden"
-                  autocomplete="on"
-                  required
-                />
+              <label class="label-text" for="projectAddress"
+                >Projects Address:</label
+              >
+              <input
+                type="text"
+                name="projectAddress"
+                id="projectAddress"
+                placeholder="Unter den Linden"
+                autocomplete="on"
+                required
+              />
 
-                <label class="label-text" for="contact-email"
-                  >Contact-email:</label
-                >
-                <input
-                  type="email"
-                  name="contact-email"
-                  id="contact-email"
-                  placeholder="name@dot.com"
-                  required
-                />
+              <label class="label-text" for="contact-email"
+                >Contact-email:</label
+              >
+              <input
+                type="email"
+                name="contact-email"
+                id="contact-email"
+                placeholder="name@dot.com"
+                required
+              />
 
-                <label class="label-text" for="textarea-field"
-                  >Project Description:</label
-                >
+              <label class="label-text" for="textarea-field"
+                >Project Description:</label
+              >
 
-                <textarea
-                  name="textarea-field"
-                  id="textarea-field"
-                  cols="20"
-                  rows="10"
-                  placeholder="Describe the permaculture project here!"
-                >
-                </textarea>
+              <textarea
+                name="textarea-field"
+                id="textarea-field"
+                cols="20"
+                rows="10"
+                placeholder="Describe the permaculture project here!"
+              >
+              </textarea>
 
-                <a href="contribute.html">
-                  <div class="submit-button">SUBMIT!</div>
-                </a>
-              </fieldset>
-            </form>
-          </div>
-        </section>
+              <a href="contribute.html">
+                <div class="submit-button">SUBMIT!</div>
+              </a>
+            </fieldset>
+          </form>
+        </div>
 
         <div class="form-section-div-absolute">
           <img
