style: add responsive design for About Us page and style its elements

--- a/about.html
+++ b/about.html
@@ -85,30 +85,32 @@
                 >
                 of permaculture are:
               </h3>
-              <ol class="ethical-principles">
-                <li>
-                  <img
-                    class="list-logo"
-                    src="./assets/images/agricultural-tool.webp"
-                    alt="funny logo with an agricultural tool"
-                  />
-                  <span class="list-text-span">Care for the Earth</span>
-                </li>
-                <li>
-                  <img
-                    class="list-logo"
-                    src="./assets/images/happy-face.webp"
-                    alt="funny logo with a happy face"
-                  /><span class="list-text-span">Care for People</span>
-                </li>
-                <li>
-                  <img
-                    class="list-logo"
-                    src="./assets/images/small-bee.webp"
-                    alt="funny logo with a small bee"
-                  /><span class="list-text-span">Fair Share</span>
-                </li>
-              </ol>
+              <div class="ethical-principles-div">
+                <ol class="ethical-principles">
+                  <li>
+                    <img
+                      class="list-logo"
+                      src="./assets/images/agricultural-tool.webp"
+                      alt="funny logo with an agricultural tool"
+                    />
+                    <span class="list-text-span">Care for the Earth</span>
+                  </li>
+                  <li>
+                    <img
+                      class="list-logo"
+                      src="./assets/images/happy-face.webp"
+                      alt="funny logo with a happy face"
+                    /><span class="list-text-span">Care for People</span>
+                  </li>
+                  <li>
+                    <img
+                      class="list-logo"
+                      src="./assets/images/small-bee.webp"
+                      alt="funny logo with a small bee"
+                    /><span class="list-text-span">Fair Share</span>
+                  </li>
+                </ol>
+              </div>
             </div>
 
             <div class="child-div about-us-photo about-us-photo-2"></div>
@@ -138,40 +140,40 @@
 
             <div class="child-div text-explanation">
               <h3 class="paragraph-title">Contact and Support Us!</h3>
-              <ul class="conntact-list">
-                <li>
-                  <span class="conntact-list-span">General Questions: </span
-                  ><br />info@peaceof.land
-                </li>
-                <li>
-                  <span class="conntact-list-span">Events: </span
-                  ><br />veranstaltung@peaceof.land
-                </li>
-                <li>
-                  <span class="conntact-list-span">Support: </span
-                  ><br />veranstaltung@peaceof.land
-                </li>
-              </ul>
+              <div class="contact-list-div">
+                <ul class="contact-list">
+                  <li>
+                    <span class="contact-list-span">General Questions: </span
+                    ><br />info@peaceof.land
+                  </li>
+                  <li>
+                    <span class="contact-list-span">Events: </span
+                    ><br />veranstaltung@peaceof.land
+                  </li>
+                  <li>
+                    <span class="contact-list-span">Support: </span
+                    ><br />veranstaltung@peaceof.land
+                  </li>
+                </ul>
+              </div>
               <hr />
               <h3 class="paragraph-title">Our Bank Account:</h3>
-              <ul class="conntact-list">
+              <ul class="contact-list">
                 <li>
-                  <span class="conntact-list-span">Konto-Inhaber: </span>Peace
-                  of Land e.V.
+                  <span class="contact-list-span">Konto-Inhaber: </span>Peace of
+                  Land e.V.
                 </li>
                 <li>
-                  <span class="conntact-list-span">Institut: </span>Berliner
+                  <span class="contact-list-span">Institut: </span>Berliner
                   Sparkasse
                 </li>
                 <li>
-                  <span class="conntact-list-span">IBAN: </span>DE63 1005 0000
+                  <span class="contact-list-span">IBAN: </span>DE63 1005 0000
                   0190 9933 75
                 </li>
+                <li><span class="contact-list-span">BIC: </span>BELADEBEXXX</li>
                 <li>
-                  <span class="conntact-list-span">BIC: </span>BELADEBEXXX
-                </li>
-                <li>
-                  <span class="conntact-list-span">Verwendungszweck: </span
+                  <span class="contact-list-span">Verwendungszweck: </span
                   >Spende
                 </li>
               </ul>
