refact: contribute and submit buttons

--- a/contribute.html
+++ b/contribute.html
@@ -56,7 +56,6 @@
           <form action="https://formdump.codeinstitute.net/" method="post">
             <fieldset>
               <legend>Contribute!</legend>
-
               <label class="label-text" for="projectName">Project Name:</label>
               <input
                 type="text"
@@ -67,7 +66,6 @@
                 required
                 autofocus
               />
-
               <label class="label-text" for="projectAddress"
                 >Projects Address:</label
               >
@@ -79,7 +77,6 @@
                 autocomplete="on"
                 required
               />
-
               <label class="label-text" for="contact-email"
                 >Contact-email:</label
               >
@@ -90,11 +87,9 @@
                 placeholder="name@dot.com"
                 required
               />
-
               <label class="label-text" for="textarea-field"
                 >Project Description:</label
               >
-
               <textarea
                 name="textarea-field"
                 id="textarea-field"
@@ -103,11 +98,8 @@
                 placeholder="Describe the permaculture project here!"
               >
               </textarea>
-
-              <a href="contribute.html">
-                <div class="submit-button">SUBMIT!</div>
-              </a>
             </fieldset>
+            <button type="submit" class="submit-button">SUBMIT!</button>
           </form>
         </div>
 
