--- a/index.html
+++ b/index.html
@@ -77,17 +77,10 @@
           <iframe
             class="map-source"
             src="https://storymaps.arcgis.com/stories/403c3e6e3bad481fab1bce4972cbb7db"
-            width="100%"
-            height="500px"
-            frameborder="0"
             allowfullscreen
             allow="geolocation"
           ></iframe>
-          <button
-            type="button"
-            target="_blank"
-            onclick="location.href='/contribute.html';"
-          >
+          <button type="button" onclick="location.href='/contribute.html';">
             CONTRIBUTE!
           </button>
         </div>
