feat: add photos to images

--- a/about.html
+++ b/about.html
@@ -81,10 +81,11 @@
                   class="permaculture-link"
                   href="https://permacultureprinciples.com/permaculture-principles/"
                   target="_blank"
-                  >ethical principles</a
-                >
+                  >ethical principles
+                </a>
                 of permaculture are:
               </h3>
+
               <div class="ethical-principles-div">
                 <ol class="ethical-principles">
                   <li>
@@ -183,6 +184,7 @@
           </div>
         </section>
       </main>
+
       <footer>
         <ul class="social-networks">
           <li>
@@ -191,8 +193,8 @@
               target="_blank"
               rel="noopener"
               aria-label="Visit our Facebook page (opens in a new tab)"
-              ><i class="fab fa-facebook"></i
-            ></a>
+              ><i class="fab fa-facebook"></i>
+            </a>
           </li>
           <li>
             <a
@@ -200,8 +202,8 @@
               target="_blank"
               rel="noopener"
               aria-label="Visit our Twitter page (opens in a new tab)"
-              ><i class="fab fa-twitter-square"></i
-            ></a>
+              ><i class="fab fa-twitter-square"></i>
+            </a>
           </li>
           <li>
             <a
@@ -209,8 +211,8 @@
               target="_blank"
               rel="noopener"
               aria-label="Visit our YouTube page (opens in a new tab)"
-              ><i class="fab fa-youtube-square"></i
-            ></a>
+              ><i class="fab fa-youtube-square"></i>
+            </a>
           </li>
         </ul>
       </footer>
