--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
   <body>
     <div class="page-container">
       <header class="header-section">
-        <a href="https://www.peaceof.land/" target="_blank"
-          ><img
+        <a href="https://www.peaceof.land/" target="_blank">
+          <img
             class="logo-image"
             src="./assets/images/Logo.webp"
             alt="Logo raised hand with agricultural tool"
@@ -113,8 +113,8 @@
               target="_blank"
               rel="noopener"
               aria-label="Visit our Facebook page (opens in a new tab)"
-              ><i class="fab fa-facebook"></i
-            ></a>
+              ><i class="fab fa-facebook"></i>
+            </a>
           </li>
           <li>
             <a
@@ -122,8 +122,8 @@
               target="_blank"
               rel="noopener"
               aria-label="Visit our Twitter page (opens in a new tab)"
-              ><i class="fab fa-twitter-square"></i
-            ></a>
+              ><i class="fab fa-twitter-square"></i>
+            </a>
           </li>
           <li>
             <a
@@ -131,8 +131,8 @@
               target="_blank"
               rel="noopener"
               aria-label="Visit our YouTube page (opens in a new tab)"
-              ><i class="fab fa-youtube-square"></i
-            ></a>
+              ><i class="fab fa-youtube-square"></i>
+            </a>
           </li>
         </ul>
       </footer>
