--- a/contribute.html
+++ b/contribute.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -44,6 +45,7 @@
           </ul>
         </nav>
       </header>
+
       <main>
         <section>
           <div class="title-section">
@@ -124,8 +126,8 @@
               target="_blank"
               rel="noopener"
               aria-label="Visit our Facebook page (opens in a new tab)"
-              ><i class="fab fa-facebook"></i
-            ></a>
+              ><i class="fab fa-facebook"></i>
+            </a>
           </li>
           <li>
             <a
@@ -133,8 +135,8 @@
               target="_blank"
               rel="noopener"
               aria-label="Visit our Twitter page (opens in a new tab)"
-              ><i class="fab fa-twitter-square"></i
-            ></a>
+              ><i class="fab fa-twitter-square"></i>
+            </a>
           </li>
           <li>
             <a
@@ -142,8 +144,8 @@
               target="_blank"
               rel="noopener"
               aria-label="Visit our YouTube page (opens in a new tab)"
-              ><i class="fab fa-youtube-square"></i
-            ></a>
+              ><i class="fab fa-youtube-square"></i>
+            </a>
           </li>
         </ul>
       </footer>
